--- a/app/menu/menu.html
+++ b/app/menu/menu.html
@@ -5,7 +5,7 @@
                 <img class="activator" ng-src="images/{{item.img}}" alt="{{item.name}}">
             </div>
             <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">
+                <span class="card-title activator grey-text text-darken-4">
                 {{item.name}}<i class="material-icons right"></i></span>
 
                 <p>Rating : {{item.rating}}
@@ -27,6 +27,7 @@
                     </select>
                     <button class="btn btn-block" ng-click="menu.chooseItem(item.meal,item.name)">Select Item</button>
                 </div>
+                <button ui-sref="item({id:item.id})" class="waves-effect waves-light btn red">Details</button>
 
 
             </div>
