--- a/app/orders/order.html
+++ b/app/orders/order.html
@@ -1,30 +1,12 @@
 <div class="row">
-    <div class="col-md-2" ng-repeat="(day,menuCategory) in order.list" ng-click="order.setActiveDay(day)">
-        {{day}}
-        <table>
-            <td>
-                <dt>
+    <div class="col-md-2" ng-repeat="(day,menuCategory) in order.list" >
+        <a ng-class="{'badge green': order.selectedDay == day}" ng-click="order.setActiveDay(day)">{{day}}</a><br>
                     Breakfast
-                </dt>
-                <dd>
                     {{menuCategory.breakfast}}
-                </dd>
-            </td>
-
-            <td>
-                <dt>Lunch</dt>
-                <dd>
+                    Lunch
                     {{menuCategory.lunch}}
-                </dd>
-            </td>
-
-            <td>
-                <dt>Dinner</dt>
-                <dd>
+                    Dinner
                     {{menuCategory.dinner}}
-                </dd>
 
-            </td>
-        </table>
     </div>
 </div>
